[package]
name = "farm-extra-rewards-wrapper"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.farm-with-locked-rewards]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.config]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.farm_token]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.rewards]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.contexts]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.farm_base_impl]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.token_send]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.pausable]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.permissions_module]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.common_structs]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.fixed-supply-token]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.mergeable]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.unwrappable]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.math]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.utils]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.auto-farm]
path = "../auto-farm"

[dev-dependencies.tests-common]
path = "../tests-common"
features = ["enable-tests-common"]

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
hex-literal = "0.3.4"

[dependencies.dharitri-sc]
version = "=0.0.1"
features = ["dct-token-payment-legacy-decode"]

[dependencies.dharitri-sc-modules]
version = "=0.0.1"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.0.1"

[dev-dependencies.energy-factory]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.sc_whitelist_module]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"

