[package]
name = "locked-token-pos-creator"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "=0.0.1"
features = ["dct-token-payment-legacy-decode"]

[dependencies.energy-query]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.utils]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.energy-factory]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.pair]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.proxy_dex]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dependencies.common_structs]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.dharitri-sc-scenario]
version = "=0.0.1"

[dev-dependencies.dharitri-sc-modules]
version = "=0.0.1"

[dependencies.simple-lock]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.pausable]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.farm_base_impl]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.config]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.farm_token]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.rewards]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.sc_whitelist_module]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.farm-boosted-yields]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.farm]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.farm-with-locked-rewards]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"


[dev-dependencies.locking_module]
git =  "https://github.com/Battula-anil-app-could/dx-exchange-sc"

