[package]
name = "farm-extra-rewards-wrapper-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "you",]

[dev-dependencies]

[dependencies.farm-extra-rewards-wrapper]
path = ".."

[dependencies.dharitri-sc-modules]
version = "=0.0.1"
[dependencies.dharitri-sc-meta]
version = "=0.0.1"